<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectBoardActivity">

    <Button
        android:id="@+id/buttonRank"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_marginTop="1dp"
        android:text="@string/butonRank"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.877" />

    <TextView
        android:id="@+id/tvSelectBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectBoard"
        android:layout_marginStart="00dp"
        android:layout_marginTop="110dp"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRank"
        />

    <Button
        android:id="@+id/UsersGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UsersGallery"
        android:layout_marginTop="350dp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSelectBoard"
        />

    <Button
        android:id="@+id/rankGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Rank"
        android:layout_marginTop="400dp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UsersGallery"
        />

    <Button
        android:id="@+id/btnOwnGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ownGallery"
        android:layout_marginTop="480dp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rankGame"
         />

</android.support.constraint.ConstraintLayout>